--- a/views/popup.html
+++ b/views/popup.html
@@ -2,15 +2,16 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+        <link rel="stylesheet" href="../src/css/popup.css">
     </head>
     <body>
         <div class="navButtons">
-            <ul>
-                <li>
-                    <i class="fas fa-cog settings"></i>
+            <ul class="navButtonsList">
+                <li class="settingsButton">
+                    <a href="#"><i class="fas fa-cog settings"></i>
                 </li>
-                <li>
-                    <i class="fas fa-chart-area activity"></i>
+                <li class="activityButton">
+                    <a href="#"><i class="fas fa-chart-area activity"></i></a>
                 </li>
             </ul>
         </div>
@@ -29,13 +30,13 @@
             <ul>
                 <li class="taskIcon">
 					<i class="fas fa-briefcase"></i></li>
-                <li class="taskName"></li>
+                <li class="taskName">Debug JavaScript</li>
                 <li class="taskBlocks"></li>
             </ul>
 		</div>
 		
 		<div class="newTaskButton">
-            <p><i class="fas fa-plus"></i> add new task</p>
+            <p><a href="#"><i class="fas fa-plus"></i> add new task</a></p>
 		</div>
 
         <div class="currentTask">
@@ -43,7 +44,7 @@
             <ul>
                 <li class="taskIcon">
                     <i class="fas fa-briefcase"></i></li>
-                <li class="taskName"></li>
+                <li class="taskName">Debug JavaScript</li>
                 <li class="taskBlocks"></li>
             </ul>
         </div>
@@ -53,15 +54,15 @@
 		</div>
 		
 		<div class="pomodoroControls">
-            <ul>
+            <ul class="pomodoroButtonList">
                 <li>
-                    <i class="fas fa-play-circle"></i>
+                    <a href="#"><i class="fas fa-play-circle"></i></a>
                 </li>
                 <li>
-                    <i class="fas fa-pause-circle"></i>
+                    <a href="#"><i class="fas fa-pause-circle"></i></a>
                 </li>
                 <li>
-                    <i class="fas fa-stop-circle"></i>
+                    <a href="#"><i class="fas fa-stop-circle"></i></a>
                 </li>
             </ul>
 		</div>
