--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -10,54 +10,56 @@ a:hover {
 	color: skyblue;
 }
 
-.navButtonsList {
+.wrapper {
 	display: grid;
-	grid-template-columns: repeat(4, 10rem);
-	list-style: none;
-	font-size: 30px;
+	grid-template-columns: 10rem 10rem 10rem 10rem;
+	justify-items: center;
 }
 
 .settingsButton {
 	grid-column-start: 1;
-	grid-column-end: 3;
+	grid-column-end: 2;
+	font-size: 30px;
+}
+
+.activityButton {
+	grid-column-start: 3;
+	grid-column-end: 4;
+	font-size: 30px;
 }
 
 .taskList {
-	display: grid;
-	grid-template-columns: repeat(3, 10em);
-	grid-gap: 1rem;
-	grid-template-rows: repeat(4, 1em);
-	margin-left: 20px;
+	grid-column-start: 2;
+	grid-column-end: span 1;
 }
 
 .newTaskButton {
-	display: grid;
-	grid-template-columns: repeat(4, 10em);
-	grid-gap: 2rem;
-	justify-content: center;
+	grid-column-start: 2;
+	grid-column-end: span 1;
 }
 
 .currentTask {
-	display: grid;
-	grid-template-columns: repeat(3, 10em);
-	grid-gap: 2rem;
-	margin-left: 20px;
+	grid-column-start: 2;
+	grid-column-end: span 1;
 }
 
 .pomodoro {
-	display: grid;
-	grid-template-columns: repeat(4, 10em);
-	grid-gap: 2rem;
 	grid-column-start: 2;
-	grid-column-end: 3;
-	justify-content: center;
+	grid-column-end: span 1;
 }
 
-.pomodoroButtonList {
-	display: grid;
-	grid-template-columns: repeat(3, 10em);
-	grid-template-rows: repeat(4, 1em);
-	list-style: none;
-	font-size: 20px;
-	margin-left: 60px;
+.pomodoroStart {
+	grid-column-start: 1;
+	grid-column-end: span 1;
 }
+
+.pomodoroPause {
+	grid-column-start: 2;
+	grid-column-end: span 1;
+}
+
+.pomodoroStop {
+	grid-column-start: 3;
+	grid-column-end: span 1;
+}
+
