--- a/views/popup.html
+++ b/views/popup.html
@@ -5,66 +5,61 @@
         <link rel="stylesheet" href="../src/css/popup.css">
     </head>
     <body>
-        <div class="navButtons">
-            <ul class="navButtonsList">
-                <li class="settingsButton">
+        <div class="wrapper">
+                <div class="settingsButton">
                     <a href="#"><i class="fas fa-cog settings"></i>
-                </li>
-                <li class="activityButton">
+                </div>
+                <div class="activityButton">
                     <a href="#"><i class="fas fa-chart-area activity"></i></a>
-                </li>
-            </ul>
-        </div>
+                </div>
+            
 
-        <div class="taskList">
-            <h3>What to do today?</h3>
-            <ul>
-                <li class="taskIcon">
-                    <i class="fas fa-paper-plane"></i>
-                </li>
-                <li class="taskName">
+            <div class="taskList">
+                <h3>What to do today?</h3>
+                <ul>
+                    <li class="taskIcon">
+                        <i class="fas fa-paper-plane"></i>
+                    </li>
+                    <li class="taskName">
                     Watch youtube videos
-                </li>
-                <li class="taskBlocks"></li>
-            </ul>
-            <ul>
-                <li class="taskIcon">
-					<i class="fas fa-briefcase"></i></li>
-                <li class="taskName">Debug JavaScript</li>
-                <li class="taskBlocks"></li>
-            </ul>
-		</div>
+                    </li>
+                    <li class="taskBlocks"></li>
+                </ul>
+                <ul>
+                    <li class="taskIcon">
+					    <i class="fas fa-briefcase"></i></li>
+                    <li class="taskName">Debug JavaScript</li>
+                    <li class="taskBlocks"></li>
+                </ul>
+		    </div>
 		
-		<div class="newTaskButton">
-            <p><a href="#"><i class="fas fa-plus"></i> add new task</a></p>
-		</div>
+		    <div class="newTaskButton">
+                <p><a href="#"><i class="fas fa-plus"></i> add new task</a></p>
+		    </div>
 
-        <div class="currentTask">
-            <h4>Current Task</h4>
-            <ul>
-                <li class="taskIcon">
-                    <i class="fas fa-briefcase"></i></li>
-                <li class="taskName">Debug JavaScript</li>
-                <li class="taskBlocks"></li>
-            </ul>
+            <div class="currentTask">
+                <h4>Current Task</h4>
+                <ul>
+                    <li class="taskIcon">
+                        <i class="fas fa-briefcase"></i></li>
+                    <li class="taskName">Debug JavaScript</li>
+                    <li class="taskBlocks"></li>
+                </ul>
+            </div>
+
+            <div class="pomodoro">
+                <h2>00:24:56</h2>													
+		    </div>
+		
+            <div class="pomodoroStart">
+                <a href="#"><i class="fas fa-play-circle"></i></a>
+            </div>
+            <div class="pomodoroPause">
+                <a href="#"><i class="fas fa-pause-circle"></i></a>
+            </div>
+            <div class="pomodoroStop">
+                <a href="#"><i class="fas fa-stop-circle"></i></a>
+            </div>
         </div>
-
-        <div class="pomodoro">
-            <h2>00:24:56</h2>													
-		</div>
-		
-		<div class="pomodoroControls">
-            <ul class="pomodoroButtonList">
-                <li>
-                    <a href="#"><i class="fas fa-play-circle"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fas fa-pause-circle"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fas fa-stop-circle"></i></a>
-                </li>
-            </ul>
-		</div>
     </body>
 </html>
