--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -12,7 +12,7 @@ a:hover {
 
 .wrapper {
 	display: grid;
-	grid-template-columns: 10rem 10rem 10rem 10rem;
+	grid-template-columns: 100px 1fr 100px;
 	justify-items: center;
 }
 
@@ -29,18 +29,27 @@ a:hover {
 }
 
 .taskList {
-	grid-column-start: 2;
-	grid-column-end: span 1;
+	grid-column-start: 1;
+	grid-column-end: span 3;
+}
+
+.wrapper ul {
+	list-style-type: none;
+	-webkit-padding-start: 0px;
+}
+
+.wrapper ul li {
+	display: inline;
 }
 
 .newTaskButton {
-	grid-column-start: 2;
-	grid-column-end: span 1;
+	grid-column-start: 1;
+	grid-column-end: span 3;
 }
 
 .currentTask {
-	grid-column-start: 2;
-	grid-column-end: span 1;
+	grid-column-start: 1;
+	grid-column-end: span 3;
 }
 
 .pomodoro {
