--- a/views/popup.html
+++ b/views/popup.html
@@ -38,7 +38,16 @@
 		    </div>
 
             <div class="currentTask">
-                <h4>Current Task</h4>
+                <h3>What to do today?</h3>
+                <ul>
+                    <li class="taskIcon">
+                        <i class="fas fa-paper-plane"></i>
+                    </li>
+                    <li class="taskName">
+                        Watch youtube videos
+                    </li>
+                    <li class="taskBlocks"></li>
+                </ul>
                 <ul>
                     <li class="taskIcon">
                         <i class="fas fa-briefcase"></i></li>
