--- a/views/popup.html
+++ b/views/popup.html
@@ -1,8 +1,10 @@
 <html>
     <head>
-        <title></title>
+        <title>WorkPlay Pomodoro</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="stylesheet" href="../src/css/popup.css">
+        <script src="../lib/jquery-3.3.1.js"></script>
+        <script src="../src/js/popup.js"></script>
     </head>
     <body>
         <div class="wrapper">
