--- a/views/popup.html
+++ b/views/popup.html
@@ -49,6 +49,7 @@
                         Watch youtube videos
                     </li>
                     <li class="taskBlocks"></li>
+                    <li class="taskBlocks"></li>
                 </ul>
                 <ul>
                     <li class="taskIcon">
