Add start timer button click event

--- a/views/popup.html
+++ b/views/popup.html
@@ -38,10 +38,10 @@
 		    <div class="newTaskButton">
                 <button><a href="#"><i class="fas fa-plus"></i> Add New Task</a></button>
 		    </div>
-
+            
+            <h3>Current Task:</h3>
             <div class="currentTask">
-                <h3>Current Task List:</h3>
-                <ul>
+                <!-- <ul>
                     <li class="taskIcon">
                         <i class="fas fa-paper-plane"></i>
                     </li>
@@ -56,11 +56,11 @@
                         <i class="fas fa-briefcase"></i></li>
                     <li class="taskName workItem">Debug JavaScript</li>
                     <li class="taskBlocks"></li>
-                </ul>
+                </ul> -->
             </div>
 
             <div class="pomodoro">
-                <h2>00:24:56</h2>													
+                <!-- <h2>00:00:00</h2> -->													
 		    </div>
 		
             <div class="pomodoroStart">
