--- a/views/popup.html
+++ b/views/popup.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../src/css/popup.css">
         <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Maven+Pro" rel="stylesheet">
         <script src="../lib/jquery-3.3.1.js"></script>
-        <script src="views.js"></script>
+        <script src="../src/js/views.js"></script>
         <script src="../src/js/popup.js"></script>
     </head>
     <body>
