--- a/views/popup.html
+++ b/views/popup.html
@@ -49,8 +49,13 @@
                     <li class="taskName playItem">
                         Watch youtube videos
                     </li>
-                    <li class="taskBlocks"></li>
-                    <li class="taskBlocks"></li>
+                    <li class="taskBlocks">
+                        <div class="blocks">
+                            <div class="block"></div>
+                            <div class="block"></div>
+                            <div class="block"></div>
+                        </div>
+                    </li>
                 </ul>
                 <ul>
                     <li class="taskIcon">
