More styling changes to add and edit forms

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -148,7 +148,8 @@ button:hover a {
 	margin: auto;
 	font-family: "Maven Pro";
 	border-color: blue;
-
+	border-radius: 20%;
+	font-size: 14px;
 }
 
 #modeSelect {
