Activity page opens in new tab upon button click

--- a/views/popup.html
+++ b/views/popup.html
@@ -14,7 +14,7 @@
                     <button><a href="#"><i class="fas fa-cog settings"></i></button>
                 </div>
                 <div class="activityButton">
-                   <button><a href="#"><i class="fas fa-chart-area activity"></i></a></button>
+                   <button><a href="views/activity.html"><i class="fas fa-chart-area activity"></i></a></button>
                 </div>
             
             <h3>What to do today?</h3>
