--- a/views/popup.html
+++ b/views/popup.html
@@ -11,7 +11,7 @@
     <body>
         <div class="wrapper">
                 <div class="settingsButton">
-                    <button id="settingsButton"><i class="fas fa-cog settings"></i></button>
+                    <button id="settingsButton"><a href="views/settings.html"><i class="fas fa-cog settings"></i></a></button>
                 </div>
                 <div class="activityButton">
                    <button><a href="views/activity.html"><i class="fas fa-chart-area activity"></i></a></button>
