--- a/views/settings.html
+++ b/views/settings.html
@@ -18,8 +18,8 @@
             <h1>Settings</h1>
             <div id="settingsMessages"></div>
             <p>
-                <label for="timeBlockSize">Time Block Size:</label>
-                <input id="timeBlockSize" type="number" max="60" min="1"> mins
+                <label for="timeBlockSizeSetting">Time Block Size:</label>
+                <input id="timeBlockSizeSetting" type="number" max="60" min="1"> mins
             </p>
             <p>
                 <label for="displayTaskNotification">Display Task Notification:</label>
