--- a/views/activity.html
+++ b/views/activity.html
@@ -15,19 +15,19 @@
           <div class="activityNav">
             <ul>
               <li><span class="selected" id="allTasksButton">All</span></li>
-              <li><span id="dailyTasksButton">Daily</span></li>
-              <li><span id="weeklyTasksButton">Weekly</span></li>
-              <li><span id="monthlyTasksButton">Monthly</span></li>
+              <li><span id="dailyTasksButton">Today</span></li>
+              <li><span id="weeklyTasksButton">Last Week</span></li>
+              <li><span id="monthlyTasksButton">Last Month</span></li>
             </ul>
           </div>
             <table id="completedTasksTable">
               <thead>
                   <tr>
-                      <th>Work/Play</th>
-                      <th>Title</th>
-                      <th>Completed Date</th>
-                      <th>Total time spent</th>
-                    </tr>
+                    <th>Work/Play</th>
+                    <th>Title</th>
+                    <th>Completed Date</th>
+                    <th>Total time spent</th>
+                  </tr>
               </thead>
               <tbody></tbody>
             </table>
