Add changes to popup forms for buttons

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -156,6 +156,10 @@ button:hover a {
 	margin-right: 10px;
 }
 
+.deleteButton {
+	margin-right: 35px;
+}
+
 #modeSelect, #titleInput, #timeBlocksInput {
 	display: block;
 	font-family: "Maven Pro";
