--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -35,6 +35,7 @@ button {
 	border: 2px solid blue;
 	font-size: 15px;
 	outline: none;
+	cursor: pointer;
 }
 
 button:hover {
@@ -152,12 +153,11 @@ button:hover a {
 }
 
 .saveButton {
-	margin-left: 75px;
 	margin-right: 10px;
 }
 
 .deleteButton {
-	margin-right: 35px;
+	margin-left: 10px;
 }
 
 #modeSelect, #titleInput, #timeBlocksInput {
@@ -177,3 +177,7 @@ button:hover a {
 	padding: 4px 4px;
 }
 
+#buttons {
+	text-align: center;
+	margin-bottom: 10px;
+}
